fix navbar collapse

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -39,7 +39,7 @@ main {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  /* flex-direction: column; */
 }
 
 h1 {
@@ -90,3 +90,7 @@ img {
 /* #bg:hover{
   opacity: 90%;
 } */
+
+.navbar-light{
+  color: #FFECD1;
+}
